// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should 90kg / 170cm get 31 1`] = `
<div>
  <div>
    <h1>
      複習React & Hooks & Jest
    </h1>
    <form
      action=""
    >
      體 重
      <input
        name="kg"
        type="text"
      />
      <br />
      身 高
      <input
        name="cm"
        type="text"
      />
    </form>
    <button>
      計算!
    </button>
    <h1>
      BMI : 
      <span
        data-testid="bmi"
      />
    </h1>
  </div>
</div>
`;

exports[`should HW4Bmi 1`] = `
<div>
  <div>
    <h1>
      HW4Bmi
    </h1>
    <form
      action=""
    >
      體重
      <input
        name="kg"
        type="text"
      />
      <br />
      身高
      <input
        name="cm"
        type="text"
      />
    </form>
    <button>
      點擊
    </button>
    <h2>
      BMI :
      <span />
    </h2>
  </div>
</div>
`;
